[package]
name = "voxel-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.0"
bevy_flycam = "0.10.0"
bevy_rapier3d = { version = "0.21.0", features = ["debug-render-3d"] }
noise = "0.8.2"
rand = "0.8.5"
