[package]
name = "voxel-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
# [profile.dev]
# opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
# [profile.dev.package."*"]
# opt-level = 3

[dependencies]
# bevy = { version = "0.10.0", features = ["dynamic_linking"] }
bevy = { version = "0.10.0" }
bevy_flycam = "0.10.0"
bevy_rapier3d = { version = "0.21.0", features = ["debug-render-3d"] }
noise = "0.8.2"
rand = "0.8.5"
